styles/main.css
/* ... */
.hidden {
  display: none;
}

header {
  min-height: 100vh;
  background: url("../imgs/cat-big.jpg") no-repeat center center fixed;
  background-size: cover;
}

.header-overlay {
  min-height: 100vh;
  background: rgba(0, 0, 0, 0.3);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header-text-wrap {
  margin: 8rem 0 0 2rem;
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: flex-start;
}

.header-text {
  width: 70%;
}

.header-text-h1 {
  color: var(--main-blue);
  font-size: 2rem;
  margin-bottom: 0;
}

.header-text-p {
  color: var(--main-blue);
  font-size: 1.2rem;
}

.down-arrow {
  margin-top: 8rem;
  border: solid var(--main-blue);
  border-width: 0 3px 3px 0;
  padding: 1rem;
  transform: rotate(45deg);
  animation: arrow-down;
  cursor: pointer;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

@keyframes arrow-down {
  0% {
    transform: translateY(0%) rotate(45deg);
  }

  100% {
    transform: translateY(20%) rotate(45deg);
  }

}

.products-grid {
  display: grid;

  grid-template-columns: 1fr;
  grid-template-rows: auto;
  justify-items: center;
}

.product {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-top: 1rem;
  width: 80%;
  max-width: 25rem;
}

.description-wrap {
  display: flex;
  justify-content: space-between;
  margin: .2rem 0;
  color: var(--main-blue);
}

.stock {
  position: absolute;
  top: 0;
  right: 0;
  background-color: var(--main-blue);
  color: var(--main-white);
  padding: .2rem .7rem;
}

.product-img {
  height: 20rem;
 
  position: relative;

}

.product-img img {
  width: 100%;
  height: 100%;
  max-width: 100%;
  max-height: 100%;
  display: block;
  position: absolute;
  transition: .5s;
  border-radius:  10px 10px 0 0 ;
}

.product-img img:last-child {
  opacity: 0;
}

.product:hover img:last-child {
  opacity: 1;
}


.description-heading {
  margin: 0;
  font-size: var(--main-size);
  font-weight: 800;
}

.description-price {
  margin: 0;
}

.description-p {
  font-size: 1rem;
  color: var(--main-blue);
  margin: 0 0 .5rem 0;
}

.buy-button {
  display: none;
  color: var(--main-white);
  padding: .2rem .5rem;
  background-color: var(--main-blue);
  border-radius: 100px;
}

.product:hover .description-price {
  display: none;
}

.product:hover .buy-button {
  display: block;
}

.products-divide {
  min-height: 50vh;
  background: url("../imgs/dog-glasses.jpg") no-repeat center center fixed;
  background-size: cover;

}

.products-divide-overlay {
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: var(--light-orange);
  background-color: rgba(26, 36, 86, .5);
}

.products-divide h2 {
  font-size: 2.5rem;
  max-width: 25rem;
  text-align: center;
  margin-bottom: 0;
}

.products-divide p {
  font-size: 1.3rem;
}

.accessories-grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  justify-items: center;
}

footer {
  background-color: var(--main-blue);
  color: var(--light-orange);
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-row: auto;
  padding: 1rem 2rem;
  column-gap: 2rem;
}

footer ul {
  display: flex;
  margin: .5rem 0;
  padding: 0;
}

footer ul li {
  margin-bottom: .3rem;
  font-size: .9rem
}

.subscription {
  grid-column: span 2;
}

footer input {
  border: 1px solid var(--dark-orange);
  background-color: inherit;
  color: inherit;
  max-width: 50%;
}

footer button {
  background-color: var(--light-orange);
  padding: .2rem 1rem;
  border-radius: 100px;
  color: var(--main-blue);
}

footer button:hover {
  background-color: var(--dark-orange);
}

footer ul li img {
  width: 2rem;
  height: 2rem;
  filter: invert(82%) sepia(20%) saturate(6509%) hue-rotate(314deg) brightness(98%) contrast(106%);

}

footer ul li img:hover {
  filter: invert(40%) sepia(47%) saturate(2823%) hue-rotate(346deg) brightness(98%) contrast(107%);

}

.footer-div {
  color: #ff8b68;
  display: flex;
  flex-direction: column;
}

.footer-div h3 {
  font-size: .8rem;
}

.footer-div ul {
  display: flex;
  flex-direction: column;
}

/* MODALS */
.modal {
  position: fixed;
  top: 0;
  background-color: rgba(0, 0, 0, .7);
  width: 100%;
  height: 100%;
  opacity: 0;
  z-index: -1;
}

.modal-show {
  opacity: 1;
  z-index: 1;
}


.modal-body {
  background-color: var(--main-blue);
  width: 22rem;
  transform: translate(-100%);
  opacity: 0;
  height: 0;
  display: flex;
  flex-direction: column;
  transition: 1s;
  min-height: 100%;
  overflow-y: auto;

}

.modal-body-show {
  transform: translate(0);
  opacity: 1;
}

.modal-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 2rem;
}

.modal-header .logo a {
  margin: 0;
}

.close-modal-btn {
  display: flex;
  margin-right: 2rem;

}

.closen-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 3px;
  height: 3px;
}

.closen-btn::before,
.closen-btn::after {
  content: "";
  width: 18px;
  height: 2px;
  position: absolute;
  background-color: var(--light-orange);
}

.closen-btn::before {
  transform: rotate(45deg);
}

.closen-btn::after {
  transform: rotate(-45deg);
}

.close-modal-btn:hover .closen-btn::after {
  background-color: var(--dark-orange);
}

.close-modal-btn:hover .closen-btn::before {
  background-color: var(--dark-orange);
}

.modal ul {
  margin-bottom: 2rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;

}

.modal-link {
  display: flex;
  margin: .5rem;
  text-transform: uppercase;
  color: var(--light-orange);
}

.modal-link:hover {
  color: var(--dark-orange);
}


.modal-sublink {
  margin-left: 1.5rem;
}

.modal-link a {
  color: inherit;

}
/* ... */

